
ADD_EXECUTABLE(easdifRmNVT${DEBUGEXT} easdifRmNVT.cpp)
ADD_EXECUTABLE(testTypes${DEBUGEXT} testTypes.cpp)
ADD_EXECUTABLE(tutorini${DEBUGEXT} tutorini.cpp)
ADD_EXECUTABLE(tutofini${DEBUGEXT} tutofini.cpp)

IF(MSVC OR CMAKE_CXX_COMPILER_ID STREQUAL "Intel")
  TARGET_LINK_LIBRARIES(easdifRmNVT${DEBUGEXT} Easdif${DEBUGEXT})
  TARGET_LINK_LIBRARIES(testTypes${DEBUGEXT} Easdif${DEBUGEXT} )
  TARGET_LINK_LIBRARIES(tutorini${DEBUGEXT} Easdif${DEBUGEXT} )
  TARGET_LINK_LIBRARIES(tutofini${DEBUGEXT} Easdif${DEBUGEXT} )
ELSE(MSVC OR CMAKE_CXX_COMPILER_ID STREQUAL "Intel")
  TARGET_LINK_LIBRARIES(easdifRmNVT${DEBUGEXT} Easdif${DEBUGEXT} m)
  TARGET_LINK_LIBRARIES(testTypes${DEBUGEXT} Easdif${DEBUGEXT} m)
  TARGET_LINK_LIBRARIES(tutorini${DEBUGEXT} Easdif${DEBUGEXT} m)
  TARGET_LINK_LIBRARIES(tutofini${DEBUGEXT} Easdif${DEBUGEXT} m)
ENDIF(MSVC OR CMAKE_CXX_COMPILER_ID STREQUAL "Intel")
IF(CMAKE_BUILD_TYPE MATCHES release)
  INSTALL(TARGETS easdifRmNVT${DEBUGEXT} DESTINATION ${INSTALL_BIN_DIR})
ENDIF(CMAKE_BUILD_TYPE MATCHES release)
