FIND_PROGRAM(PERL_EXECUTABLE perl)
MESSAGE(STATUS "perl executable ${PERL_EXECUTABLE}")
IF(PERL_EXECUTABLE)
  FIND_PACKAGE(PerlLibs)  
  IF(PERL_INCLUDE_PATH)
    Message(STATUS "enable perl interface")
    INCLUDE_DIRECTORIES(${PERL_INCLUDE_PATH})
    
    SET(INTERFACE_SRC ${CMAKE_CURRENT_SOURCE_DIR}/easdif-perl5.i)
    
    SET_SOURCE_FILES_PROPERTIES(${INTERFACE_SRC} PROPERTIES CPLUSPLUS ON)
    SET(CMAKE_SWIG_FLAGS "-I${CMAKE_CURRENT_BINARY_DIR}" "-I${CMAKE_CURRENT_SOURCE_DIR}")
    SWIG_ADD_MODULE(eaSDIF perl  ${INTERFACE_SRC}  )
    SWIG_LINK_LIBRARIES(eaSDIF Easdif${DEBUGEXT})
    ADD_CUSTOM_TARGET(perlswig)
    ADD_DEPENDENCIES(perlswig ${SWIG_MODULE_eaSDIF_REAL_NAME})
    CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/test.pl.in ${CMAKE_CURRENT_BINARY_DIR}/test.pl @ONLY)    
    IF(EXISTS ${PERL_EXECUTABLE})
      IF(APPLE)
        SET(LOADPATH DYLD_LIBRARY_PATH)
      ELSE (APPLE)
        IF(WIN32)
          SET(LOADPATH PATH)
        ELSE(WIN32)
          IF ( "${CMAKE_SYSTEM_NAME}" MATCHES "Linux")
            SET(LOADPATH LD_LIBRARY_PATH)
          ENDIF( "${CMAKE_SYSTEM_NAME}" MATCHES "Linux")
          IF ( "${CMAKE_SYSTEM_NAME}" MATCHES "FreeBSD")
            SET(LOADPATH DYLD_LIBRARY_PATH)
          ENDIF( "${CMAKE_SYSTEM_NAME}" MATCHES "FreeBSD")
        ENDIF(WIN32)
      ENDIF(APPLE)
      
      ADD_CUSTOM_TARGET(checkswigperl
        COMMAND echo Testing perl swig interface
        COMMAND ${LOADPATH}=$(CMAKE_BINARY_DIR)/easdif ${PERL_EXECUTABLE} ${CMAKE_CURRENT_BINARY_DIR}/test.pl)
      ADD_DEPENDENCIES(checkswigperl perlswig)
      ADD_DEPENDENCIES(checkswig checkswigperl)
    ENDIF(EXISTS ${PERL_EXECUTABLE})
  ENDIF(PERL_INCLUDE_PATH)
ENDIF(PERL_EXECUTABLE)
